cambiando el master

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 
-    <p>HOLA ESTOY EN LA RAMA UNO LOQUIS</p>
-    <p>AQUI HACIENDO UN MERCHE :D</p>
+    <p>HOLA ESTOY EN LA MASTER :D</p>
 
 </body>
 </html> 
