--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-    <p>HOLA ESTOY EN LA MASTER :D</p>
+    <p>HOLA ESTOY EN LA second phase :D</p>
+
+    <p>:D</p>
 
 </body>
 </html> 
