cambios de texto rama1

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-    <p>HOLA ESTOY EN LA second phase :D</p>
+    <p>HOLA</p>
 
-    <p>:D</p>
+    estas lineas las agrego a la master
 
 </body>
 </html> 
